@@ -3,6 +3,9 @@ PiCenter Changelog
 
 1.0.00a
 
+Build 100107
+    Invalidate user on http session expiration.
+
 11/08/2019
 Build 100106
     Finished login impl.
